--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,1 @@
-/meson-0.22.0.tar.gz
-/meson-0.22.0-c6dbf98.tar.gz
-/meson-c6dbf98.tar.gz
-/meson-7581895.tar.gz
-/meson-f9f51b1.tar.gz
-/meson-fa2c659.tar.gz
-/meson-a5f30e7.tar.gz
-/meson-a084a8e.tar.gz
-/meson-78d31ca.tar.gz
-/meson-18550fe.tar.gz
-/meson-3b49b71.tar.gz
-/meson-0.23.0.tar.gz
-/meson-0ba1d54.tar.gz
-/meson-0.24.0.tar.gz
-/meson-0.25.0.tar.gz
-/meson-0.26.0.tar.gz
-/meson-0.27.0.tar.gz
-/meson-0.28.0.tar.gz
-/meson-0.29.0.tar.gz
-/meson-0.30.0.tar.gz
-/meson-0.31.0.tar.gz
-/meson-0.33.0.tar.gz
-/meson-0.34.0.tar.gz
-/meson-0.35.0.tar.gz
-/meson-0.35.1.tar.gz
-/meson-0.36.0.tar.gz
-/meson-0.37.0.tar.gz
-/meson-0.37.1.tar.gz
-/meson-0.38.0.tar.gz
-/meson-0.38.1.tar.gz
-/meson-0.39.0.tar.gz
-/meson-0.39.1.tar.gz
-/meson-0.40.0.tar.gz
-/meson-0.40.1.tar.gz
-/meson-0.41.0.tar.gz
-/meson-0.41.1.tar.gz
-/meson-0.41.2.tar.gz
-/meson-0.42.0.tar.gz
-/meson-0.42.1.tar.gz
-/meson-0.43.0.tar.gz
-/meson-0.44.0.tar.gz
-/meson-0.44.1.tar.gz
-/meson-0.45.0.tar.gz
-/meson-0.45.1.tar.gz
-/meson-0.46.0.tar.gz
-/meson-0.46.1.tar.gz
-/meson-0.47.0.tar.gz
-/meson-0.47.1.tar.gz
-/meson-0.47.2.tar.gz
-/meson-0.48.0.tar.gz
-/meson-0.48.1.tar.gz
-/meson-0.48.2.tar.gz
-/meson-0.49.0.tar.gz
-/meson-0.49.1.tar.gz
-/meson-0.49.2.tar.gz
-/meson-0.50.0.tar.gz
-/meson-0.50.1.tar.gz
-/meson-0.51.0.tar.gz
-/meson-0.51.1.tar.gz
-/meson-0.51.2.tar.gz
-/meson-0.52.0.tar.gz
+/meson-*.tar.gz
