--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,6 +1,6 @@
 srpm:
-	spectool -g "$(spec)"
-	rpmbuild -rr "$(spec)"
-	mv *.srpm "$(outdir)"
+	spectool -g -R "$(spec)"
+	rpmbuild -bs "$(spec)"
+	cp *.srpm "$(outdir)"
 
 .PHONY: srpm
