--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -2,6 +2,6 @@ srpm:
 	@echo "Hello?"
 	spectool -g -R "$(spec)"
 	rpmbuild -bs "$(spec)"
-	cp *.srpm "$(outdir)"
+	cp *.rpm "$(outdir)"
 
 .PHONY: srpm
