ok use rpkg with .copr/Makefile?

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,7 +1,6 @@
 srpm:
 	@echo "Hello?"
 	spectool -g -R "$(spec)"
-	rpmbuild -bs "$(spec)"
-	cp *.rpm "$(outdir)"
+	rpkg srpm --outdir "$(outdir)" --spec "$(spec)"
 
 .PHONY: srpm
