removed unnecessary patch; updated copr Makefile

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,6 +1,10 @@
-srpm:
-	@echo "Hello?"
-	spectool -g -R "$(spec)"
+
+srpm: install-deps
+	@echo "Preparing SRPM in $(PWD) for $(spec) to $(outdir)"
+	spectool -g "$(spec)"
 	rpkg srpm --outdir "$(outdir)" --spec "$(spec)"
+
+install-deps:
+	dnf -y install rpkg rpmdevtools
 
 .PHONY: srpm
